# Breakout

./: .gitignore  BallObject.cpp  Breakout - OpenGL.sln  Breakout - OpenGL.vcxproj  Breakout - OpenGL.vcxproj.filters  CMakeLists.txt  GameLevel.cpp  GameObject.cpp  PostProcessing.cpp  PowerUp.h  README.md  ResourceManager.cpp  Shader.cpp  Shader.h  SpriteRenderer.cpp  Texture.cpp  glad.c
Breakout.7922a70a/x64/Debug/: Breakout - OpenGL.exe.recipe  vc143.idb
Breakout.7922a70a/x64/Debug/Breakout.7922a70a.tlog/: Breakout - OpenGL.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Libraries/include/glad/: glad.h
include/: BallObject.h  Game.h  GameLevel.h  GameObject.h  LoadUtility.h  ParticleGenerator.h  PostProcessor.h  ResourceManager.h  SpriteRenderer.h  Texture.h
src/: Breakout - OpenGL.cpp  Game.cpp  GameLevel.cpp  LoadUtility.cpp  ParticleGenerator.cpp  PostProcessing.vert  ResourceManager.cpp  Shader.cpp  Sprite.vert
